; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_max8660.c_max8660_dcdc_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_max8660.c_max8660_dcdc_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regulator_dev = type { i32 }
%struct.max8660 = type { i32 }

@MAX8660_V3 = common dso_local global i64 0, align 8
@MAX8660_OVER1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regulator_dev*)* @max8660_dcdc_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max8660_dcdc_enable(%struct.regulator_dev* %0) #0 {
  %2 = alloca %struct.regulator_dev*, align 8
  %3 = alloca %struct.max8660*, align 8
  %4 = alloca i32, align 4
  store %struct.regulator_dev* %0, %struct.regulator_dev** %2, align 8
  %5 = load %struct.regulator_dev*, %struct.regulator_dev** %2, align 8
  %6 = call %struct.max8660* @rdev_get_drvdata(%struct.regulator_dev* %5)
  store %struct.max8660* %6, %struct.max8660** %3, align 8
  %7 = load %struct.regulator_dev*, %struct.regulator_dev** %2, align 8
  %8 = call i64 @rdev_get_id(%struct.regulator_dev* %7)
  %9 = load i64, i64* @MAX8660_V3, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i64
  %12 = select i1 %10, i32 1, i32 4
  store i32 %12, i32* %4, align 4
  %13 = load %struct.max8660*, %struct.max8660** %3, align 8
  %14 = load i32, i32* @MAX8660_OVER1, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @max8660_write(%struct.max8660* %13, i32 %14, i32 255, i32 %15)
  ret i32 %16
}

declare dso_local %struct.max8660* @rdev_get_drvdata(%struct.regulator_dev*) #1

declare dso_local i64 @rdev_get_id(%struct.regulator_dev*) #1

declare dso_local i32 @max8660_write(%struct.max8660*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
